<resources>
    <string name="app_name">우리의 주차장</string>
    <string name="no_result_msg">검색 결과가 없습니다.</string>
    <string name="not_connectied_network">네트워크 연결을 확인해주세요.</string>
    <string name="api_success_msg">API SUCCESS</string>
    <string name="api_check_success_msg">API CHECK SUCCESS</string>
    <string name="db_success_msg">DB SUCCESS</string>
    <string name="api_error_msg">ERROR</string>
    <string name="btn_search_msg">Search</string>
    <string name="msg_location_not_permission">위치 권한이 없습니다.</string>
    <string name="msg_parking_loading">주차장 정보를 불러오고 있습니다.</string>
    <string name="msg_search">검색</string>
    <string name="msg_search_result">검색결과 또는 주차장이 없습니다.</string>

    <string-array name="parking_lot_section">
        <item>주차장구분</item>
        <item>공영</item>
        <item>민영</item>
    </string-array>

    <string-array name="parking_lot_type">
        <item>주차장유형</item>
        <item>노외</item>
        <item>노상</item>
        <item>부설</item>
    </string-array>

    <string-array name="parking_charge_info">
        <item>요금정보</item>
        <item>무료</item>
        <item>유료</item>
        <item>혼합</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_check_empty_park_">주차장을 입력하세요.</string>
    <string name="msg_check_word_count">단어를 2글자 이상 입력해 주세요!</string>
    <string name="default_text">-</string>
    <string name="msg_alert_need_permission">앱을 이용하기 위해서는 권한이 필요합니다.</string>
    <string name="kakao_native_app_key">08cf91786683fd8aff78caf660dcb22b</string>
    <string name="tmap_native_app_key">77HqPMruKz5CvxT8G9lLajQUK8g1Trzaq8pcIc16</string>
    <string name="msg_setting_navigation_app">내비게이션으로\n설정할 앱을 선택해주세요.</string>
    <string name="msg_t_map">T map</string>
    <string name="msg_kakao_navi">카카오 내비</string>
    <string name="msg_hint_search_park">목적지 또는 주소 검색</string>
</resources>