<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.jtmcompany.parkingapplication.ui.viewmodel.ParkInfoViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_park_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/sp_park_section"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:popupElevation="5dp"
                android:background="@drawable/spinner_bg"/>

            <Spinner
                android:id="@+id/sp_park_type"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:popupElevation="5dp"
                android:background="@drawable/spinner_bg"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <Spinner
                android:id="@+id/sp_park_charge"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:popupElevation="5dp"
                android:background="@drawable/spinner_bg"/>
        </LinearLayout>

        <View
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dddddd"
            app:layout_constraintTop_toBottomOf="@+id/layout_park_type"
            />

        <LinearLayout
            android:id="@+id/layout_search"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/guideline1">

            <EditText
                android:id="@+id/edit_keword"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="14dp"
                android:inputType="text"
                android:background="@drawable/edit_normal_bg"
                android:hint="@string/msg_hint_search_park"
                android:textColorHint="@color/color_dddddd"
                />

            <Button
                android:id="@+id/bt_search"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/color_ffffff"
                android:text="@string/msg_search"
                android:background="@drawable/button_normal_selector"/>
        </LinearLayout>

        <View
            android:id="@+id/guideLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dddddd"
            app:layout_constraintTop_toBottomOf="@id/layout_search"
            />

        <FrameLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideLine2"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:scrollbars="vertical"/>

            <LinearLayout
                android:id="@+id/layout_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/msg_search_result"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>